--- a/javalib/Makefile
+++ b/javalib/Makefile
@@ -1,5 +1,9 @@
-all:
+all: bytecode native
+
+native:
 	ocamlopt -g -I ../extlib -a -o java.cmxa jData.ml jReader.ml
+bytecode:
+	ocamlc -g -I ../extlib -a -o java.cma jData.ml jReader.ml
 	
 clean:
 	rm -rf java.cmxa java.lib java.a $(wildcard *.cmx) $(wildcard *.obj) $(wildcard *.o) $(wildcard *.cmi)
